--- a/logins/templates/web/login.html
+++ b/logins/templates/web/login.html
@@ -3,52 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'web/style.css' %}"/>
     <script src="/static/js/login.js"></script>
+
 </head>
 <body>
-<!--<form action="" method="post" class="form_id">-->
-    <!--{% csrf_token %}-->
-    <!--<table>-->
-        <!--<tr>-->
-            <!--<th>-->
-                <!--<label >Tên đăng nhập :</label>-->
-            <!--</th>-->
-            <!--<td>-->
-                <!--{{ form.user }}-->
-            <!--<td>-->
-        <!--</tr>-->
-        <!--<tr>-->
-            <!--<th>-->
-                <!--<label >Mật khẩu:</label>-->
-            <!--</th>-->
-            <!--<td>-->
-                <!--{{ form.password }}-->
-            <!--</td>-->
-        <!--</tr>-->
-        <!--<td>-->
-            <!--<input type="submit" value="Đăng nhập"> <input type="button" id="buttonId" value="Đăng ký">-->
-        <!--</td>-->
-
-    <!--</table>-->
-<!--</form>-->
 <div class="login-page">
-  <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
-  </div>
+    <div class="form">
+        <form class="login-form" action="login" method="post">
+            {% csrf_token %}
+            <input type="text" placeholder="Nhập số điện thoại"/>
+            <input type="password" placeholder="Mật khẩu" value=""/>
+            <button type="submit">Đăng nhập</button>
+            <!--<button>login</button>-->
+            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+        </form>
+    </div>
 </div>
 </body>
 </html>
