--- a/logins/templates/web/register.html
+++ b/logins/templates/web/register.html
@@ -3,65 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'web/style.css' %}"/>
+    <script src="/static/js/login.js"></script>
 </head>
 <body>
-<div class="content">
-    <div class="form_register">
-        <form action="" method="post" class="form_id">
+<div class="login-page">
+    <div class="form">
+        <form class="register-form" action="" method="post">
             {% csrf_token %}
-            <table>
-                <tr>
-                    <th>
-                        <label>Tên đăng nhập :</label>
-                    </th>
-                    <td>
-                        {{ form.phone }}
-                    <td>
-                </tr>
-                <tr>
-                    <th>
-                        <label>Mật khẩu:</label>
-                    </th>
-                    <td>
-                        {{ form.password }}
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        <label >Email:</label>
-                    </th>
-                    <td>
-                        {{ form.email }}
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        <label >Họ Tên:</label>
-                    </th>
-                    <td>
-                        {{ form.name }}
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        <label >Ngày sinh:</label>
-                    </th>
-                    <td>
-                        {{ form.birthday }}
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <input type="submit" value="Đăng ký">
-                    </td>
-                </tr>
-            </table>
+            <input type="text" placeholder="Số điện thoại"/>
+            <input type="password" placeholder="Mật khẩu"/>
+            <input type="text" placeholder="Email"/>
+            <input type="text" placeholder="Họ và tên"/>
+            <input type="text" placeholder="Ngày sinh"/>
+            <button type="submit">Đăng Ký</button>
+            <p class="message">Already registered? <a href="/login">Sign In</a></p>
         </form>
     </div>
 </div>
-
 </body>
 </html>
