--- a/logins/templates/web/index.html
+++ b/logins/templates/web/index.html
@@ -4,6 +4,7 @@
     <title>index</title>
      {% load static %}
     <meta charset="utf-8">
+     <link rel="stylesheet" type="text/css" href="{% static 'web/style_index.css' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
@@ -19,7 +20,6 @@
         <tr>
             <th>STT</th>
             <th>Tài khoản</th>
-            <th>Mật khẩu</th>
             <th>Họ tên</th>
             <th>Ngày sinh</th>
             <th>Email</th>
@@ -32,7 +32,6 @@
             <tr>
                 <td>{{forloop.counter0}}</td>
                 <td>{{acount.phone}}</td>
-                <td>{{acount.password}}</td>
                 <td>{{acount.name}}</td>
                 <td>{{acount.birthday}}</td>
                 <td>{{acount.email}}</td>
