--- a/logins/templates/web/register.html
+++ b/logins/templates/web/register.html
@@ -5,8 +5,11 @@
     <title>Register</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'web/style.css' %}"/>
-    <script src="/static/js/login.js"></script>
+    <script src="/static/js/jquery.growl.js" type="text/javascript"></script>
+    <script src="/static/js/login.js" type="text/javascript"></script>
+    <link href="{% static 'web/jquery.growl.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'web/style.css' %}" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
 <div class="login-page">
@@ -17,11 +20,19 @@
             <input type="password" placeholder="Mật khẩu" name="pass"/>
             <input type="text" placeholder="Email" name="email"/>
             <input type="text" placeholder="Họ và tên" name="name"/>
-            <input type="text" placeholder="Ngày sinh" name="birthday"/>
+            <input type="date" placeholder="Ngày sinh" name="birthday"/>
             <button type="submit">Đăng Ký</button>
+             <p>{{message}}</p>
             <p class="message">Already registered? <a href="/login">Sign In</a></p>
+
         </form>
     </div>
+    <script type="text/javascript">
+  $.growl({ title: "Growl", message: "The kitten is awake!" });
+  $.growl.error({ message: "The kitten is attacking!" });
+  $.growl.notice({ message: "The kitten is cute!" });
+  $.growl.warning({ message: "The kitten is ugly!" });
+</script>
 </div>
 </body>
 </html>
