--- a/logins/templates/web/login.html
+++ b/logins/templates/web/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    {% load i18n %}
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'web/style.css' %}"/>
     <script src="/static/js/login.js"></script>
@@ -15,12 +16,13 @@
 
         <form class="login-form" action="" method="post">
               {% csrf_token %}
-            <input type="text" placeholder="Nhập số điện thoại" name="phone" />
-            <input type="password" placeholder="Mật khẩu" name="pass" />
-            <button type="submit">Đăng nhập</button>
+            <input type="text" placeholder='{% trans "Number phone" %}' name="phone" />
+            <input type="password" placeholder='{% trans "PassWord" %}' name="pass" />
+            <button type="submit">{% trans "Login" %}</button>
             <p>{{message}}</p>
             <!--<button>login</button>-->
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+            <p class="message">{% trans "Not registered?" %} <a href="/register">{% trans "Create an account" %}</a></p>
+
         </form>
     </div>
 </div>
