--- a/logins/templates/web/register.html
+++ b/logins/templates/web/register.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Register</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    {% load i18n %}
     {% load static %}
-    <script src="/static/js/jquery.growl.js" type="text/javascript"></script>
+    <!--<script src="/static/js/jquery.growl.js" type="text/javascript"></script>-->
     <script src="/static/js/login.js" type="text/javascript"></script>
-    <link href="{% static 'web/jquery.growl.css' %}" rel="stylesheet" type="text/css" />
+    <!--<link href="{% static 'web/jquery.growl.css' %}" rel="stylesheet" type="text/css"/>-->
     <link href="{% static 'web/style.css' %}" rel="stylesheet" type="text/css"/>
 
 </head>
@@ -16,23 +17,27 @@
     <div class="form">
         <form class="register-form" action="" method="post">
             {% csrf_token %}
-            <input type="text" placeholder="Số điện thoại" name="phone"/>
-            <input type="password" placeholder="Mật khẩu" name="pass"/>
-            <input type="text" placeholder="Email" name="email"/>
-            <input type="text" placeholder="Họ và tên" name="name"/>
-            <input type="date" placeholder="Ngày sinh" name="birthday"/>
-            <button type="submit">Đăng Ký</button>
-             <p>{{message}}</p>
-            <p class="message">Already registered? <a href="/login">Sign In</a></p>
+            <input type="text" placeholder='{% trans "Number phone"%}' name="phone"/>
+            <input type="password" placeholder='{% trans "PassWord" %}' name="pass"/>
+            <input type="text" placeholder='{% trans "Email" %}' name="email"/>
+            <input type="text" placeholder='{% trans "Name" %}' name="name"/>
+            <input type="date" placeholder='{% trans "Birthday" %}' name="birthday"/>
+            <button type="submit">{% trans "Register" %}</button>
+            <p>{{message}}</p>
+            <p class="message">{% trans "Already registered?"%} <a href="/login">{% trans "Sign In"%}</a></p>
 
         </form>
     </div>
+
     <script type="text/javascript">
-  $.growl({ title: "Growl", message: "The kitten is awake!" });
-  $.growl.error({ message: "The kitten is attacking!" });
-  $.growl.notice({ message: "The kitten is cute!" });
-  $.growl.warning({ message: "The kitten is ugly!" });
-</script>
+ $(function(){
+   {% if alert %}
+      //whatever conditions and js code
+      alert('{{alert}}');
+   {% endif %}
+ });
+
+    </script>
 </div>
 </body>
 </html>
