--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -4,7 +4,7 @@
     <title>index</title>
     {% load static %}
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'web/style_index.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/style_index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
